5.0b4 -> 5.0.0:
    - rse: add RPM Lua function rpm.verbose() to be able to check CLI option --verbose
    - rse: add often required RPM Lua convenience function util.slurp()
    - rse: add PCRE to "devtool standalone" procedure
    - rse: make RPM configuration in "devtool standalone" procedure more flexible

5.0b3 -> 5.0b4:
    - jbj: fix: calculate clearsign'd text digests correctly.
    - jbj: fix: display RPMRC_NOKEY failures explicitly.
    - jbj: rip --predefine entirely, add comment re macro added both global/CLI.
    - jbj: link tpgp against rpmnsProbeSignature() instead.
    - jbj: add (hidden) --usecrypto option.
    - jbj: add a (unused) flags arg to rpmnsProbeSignature.
    - jbj: change rpmnsProbeSignature to return rpmRC (note: success is 0 now).
    - jbj: add --rpmnsdebug to see rpmnsProbeSignature() spew.
    - jbj: permit URI's in signature(...) arguments.
    - jbj: fix: argvSplit was doing ltrim and skipping spans of seperators.
    - rse: improve RPM Lua function util.rsubst(): perform repeated substitutions and honor prolog/epilog parts
    - jbj: re-add all the debugging spew under --rpmnsdebug for now.
    - jbj: functional signature(...) name space probe.
    - jbj: add rpmnsProbeSignature() & "signature(/text:/sig) = /pub:id" probe.
    - jbj: pgpReadPkts: truncate binary encoded pgp pktlen to actual length.
    - jbj: pgpReadPkts: identify binary encoded pgp pkts correctly.
    - jbj: fix: remove unused assertion.
    - jbj: fix: undo deliberate damage from rpm's RHL8 security audit. ptooey!
    - rse: allow assertion of a particular GnuPG signing key via "gnupg(<path>) = <fingerprint>" in dependencies
    - rse: fix invocaction of GnuPG's gpg(1) command for gnupg(<path>) dependency assertions
    - afb: hide the rpmlib Version/Timestamp/Vendor markers spew unless verbose.
    - rse: fix %{@foo} macro stack expansion including also the value at the stack bottom